@@ -140,6 +140,13 @@
           not be a number. Characters which do not match this
           restriction will be replaced by an underscore when passed to
           CGI scripts and SSI pages.</li>
+          
+          <li>A special case are HTTP headers which are passed to CGI
+          scripts and the like via environment variables (see below).
+          They are converted to uppercase and only dashes are replaced with
+          underscores; if the header contains any other (invalid) character,
+          the whole header is silently dropped. See <a href="#fixheader">
+          below</a> for a workaround.</li>
 
           <li>The <directive module="mod_env">SetEnv</directive> directive runs
           late during request processing meaning that directives such as
@@ -422,6 +429,33 @@
 
   <section id="examples">
     <title>Examples</title>
+
+    <section id="fixheader">
+      <title>Passing broken headers to CGI scripts</title>
+      
+      <p>Starting with version 2.4, Apache is more strict about how HTTP
+      headers are converted to environment variables in <module>mod_cgi
+      </module> and other modules:  Previously any invalid characters
+      in header names were simply translated to underscores.  This allowed
+      for some potential cross-site-scripting attacks via header injection
+      (see <a href="http://events.ccc.de/congress/2007/Fahrplan/events/2212.en.html">
+      Unusual Web Bugs</a>, slide 19/20).</p>
+      
+      <p>If you have to support a client which sends broken headers and
+      which can't be fixed, a simple workaround involving <module>mod_setenvif
+      </module> and <module>mod_header</module> allows you to still accept
+      these headers:</p>
+      
+<example><pre>
+# 
+# The following works around a client sending a broken Accept_Encoding
+# header.
+#
+SetEnvIfNoCase ^Accept.Encoding$ ^(.*)$ fix_accept_encoding=$1
+RequestHeader set Accept-Encoding %{fix_accept_encoding}e env=fix_accept_encoding
+</pre></example>
+      
+    </section>
 
     <section id="misbehaving">
         <title>Changing protocol behavior with misbehaving clients</title>
